# serializer version: 1
# name: test_sqlite_fixture_matches_snapshot[db_v1.sqlite][db_v1_sql_dump]
  '''
  BEGIN TRANSACTION;
  CREATE TABLE alembic_version (
  	version_num VARCHAR(32) NOT NULL,
  	CONSTRAINT alembic_version_pkc PRIMARY KEY (version_num)
  );
  INSERT INTO "alembic_version" VALUES('0543a383957b');
  CREATE TABLE devices (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	equipment_no VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  CREATE TABLE f_capacity (
  	user_id BIGINT NOT NULL,
  	used_capacity BIGINT NOT NULL,
  	total_capacity BIGINT NOT NULL,
  	PRIMARY KEY (user_id)
  );
  CREATE TABLE f_note_page_content (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	page_index BIGINT NOT NULL,
  	page_id VARCHAR NOT NULL,
  	content_hash VARCHAR,
  	text_content TEXT,
  	embedding TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_note_page_content UNIQUE (file_id, page_id)
  );
  CREATE TABLE f_recycle_file (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	size BIGINT NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	delete_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  CREATE TABLE f_summary (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_id BIGINT,
  	name VARCHAR,
  	unique_identifier VARCHAR NOT NULL,
  	parent_unique_identifier VARCHAR,
  	content TEXT,
  	source_path VARCHAR,
  	data_source VARCHAR,
  	source_type BIGINT,
  	is_summary_group BOOLEAN NOT NULL,
  	description VARCHAR,
  	tags VARCHAR,
  	md5_hash VARCHAR,
  	extra_metadata TEXT,
  	comment_str VARCHAR,
  	comment_handwrite_name VARCHAR,
  	handwrite_inner_name VARCHAR,
  	handwrite_md5 VARCHAR,
  	creation_time BIGINT,
  	last_modified_time BIGINT,
  	is_deleted BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	author VARCHAR,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  CREATE TABLE f_summary_tag (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	name VARCHAR NOT NULL,
  	unique_identifier VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  CREATE TABLE f_system_task (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	task_type VARCHAR NOT NULL,
  	"key" VARCHAR NOT NULL,
  	status VARCHAR NOT NULL,
  	data TEXT,
  	retry_count BIGINT NOT NULL,
  	last_error TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_system_task UNIQUE (file_id, task_type, "key")
  );
  CREATE TABLE f_user_file (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	directory_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	size BIGINT NOT NULL,
  	md5 VARCHAR,
  	storage_key VARCHAR,
  	is_active VARCHAR(1) NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  CREATE TABLE key_values (
  	"key" VARCHAR NOT NULL,
  	value VARCHAR NOT NULL,
  	expiry FLOAT NOT NULL,
  	PRIMARY KEY ("key")
  );
  CREATE TABLE login_records (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	login_method VARCHAR,
  	equipment VARCHAR,
  	ip VARCHAR,
  	create_time VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  CREATE TABLE t_schedule_task (
  	task_id BIGINT NOT NULL,
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	detail VARCHAR,
  	status VARCHAR NOT NULL,
  	importance VARCHAR,
  	due_time BIGINT,
  	completed_time BIGINT,
  	recurrence VARCHAR,
  	is_reminder_on BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (task_id)
  );
  CREATE TABLE t_schedule_task_group (
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (task_list_id)
  );
  CREATE TABLE users (
  	id INTEGER NOT NULL,
  	email VARCHAR NOT NULL,
  	password_md5 VARCHAR NOT NULL,
  	is_active BOOLEAN NOT NULL,
  	display_name VARCHAR,
  	phone VARCHAR,
  	avatar VARCHAR,
  	total_capacity VARCHAR NOT NULL,
  	is_admin BOOLEAN NOT NULL,
  	PRIMARY KEY (id)
  );
  CREATE INDEX ix_f_note_page_content_file_id ON f_note_page_content (file_id);
  CREATE INDEX ix_f_summary_file_id ON f_summary (file_id);
  CREATE INDEX ix_f_summary_parent_unique_identifier ON f_summary (parent_unique_identifier);
  CREATE INDEX ix_f_summary_user_id ON f_summary (user_id);
  CREATE INDEX ix_f_summary_tag_user_id ON f_summary_tag (user_id);
  CREATE INDEX ix_f_system_task_file_id ON f_system_task (file_id);
  CREATE INDEX ix_f_system_task_task_type ON f_system_task (task_type);
  CREATE INDEX idx_user_dir_active ON f_user_file (user_id, directory_id, is_active);
  CREATE INDEX ix_f_user_file_directory_id ON f_user_file (directory_id);
  CREATE INDEX ix_f_user_file_user_id ON f_user_file (user_id);
  CREATE INDEX ix_key_values_expiry ON key_values (expiry);
  CREATE INDEX ix_t_schedule_task_task_list_id ON t_schedule_task (task_list_id);
  CREATE INDEX ix_t_schedule_task_user_id ON t_schedule_task (user_id);
  CREATE INDEX ix_t_schedule_task_group_user_id ON t_schedule_task_group (user_id);
  CREATE UNIQUE INDEX ix_users_email ON users (email);
  CREATE UNIQUE INDEX ix_devices_equipment_no ON devices (equipment_no);
  CREATE INDEX ix_devices_user_id ON devices (user_id);
  CREATE INDEX ix_login_records_create_time ON login_records (create_time);
  CREATE INDEX ix_login_records_user_id ON login_records (user_id);
  COMMIT;
  '''
# ---
# name: test_sqlite_fixture_matches_snapshot[db_v1_populated.sqlite][db_v1_populated_sql_dump]
  '''
  BEGIN TRANSACTION;
  CREATE TABLE alembic_version (
  	version_num VARCHAR(32) NOT NULL,
  	CONSTRAINT alembic_version_pkc PRIMARY KEY (version_num)
  );
  INSERT INTO "alembic_version" VALUES('0543a383957b');
  CREATE TABLE devices (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	equipment_no VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  CREATE TABLE f_capacity (
  	user_id BIGINT NOT NULL,
  	used_capacity BIGINT NOT NULL,
  	total_capacity BIGINT NOT NULL,
  	PRIMARY KEY (user_id)
  );
  CREATE TABLE f_note_page_content (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	page_index BIGINT NOT NULL,
  	page_id VARCHAR NOT NULL,
  	content_hash VARCHAR,
  	text_content TEXT,
  	embedding TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_note_page_content UNIQUE (file_id, page_id)
  );
  CREATE TABLE f_recycle_file (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	size BIGINT NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	delete_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  CREATE TABLE f_summary (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_id BIGINT,
  	name VARCHAR,
  	unique_identifier VARCHAR NOT NULL,
  	parent_unique_identifier VARCHAR,
  	content TEXT,
  	source_path VARCHAR,
  	data_source VARCHAR,
  	source_type BIGINT,
  	is_summary_group BOOLEAN NOT NULL,
  	description VARCHAR,
  	tags VARCHAR,
  	md5_hash VARCHAR,
  	extra_metadata TEXT,
  	comment_str VARCHAR,
  	comment_handwrite_name VARCHAR,
  	handwrite_inner_name VARCHAR,
  	handwrite_md5 VARCHAR,
  	creation_time BIGINT,
  	last_modified_time BIGINT,
  	is_deleted BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	author VARCHAR,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  CREATE TABLE f_summary_tag (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	name VARCHAR NOT NULL,
  	unique_identifier VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  CREATE TABLE f_system_task (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	task_type VARCHAR NOT NULL,
  	"key" VARCHAR NOT NULL,
  	status VARCHAR NOT NULL,
  	data TEXT,
  	retry_count BIGINT NOT NULL,
  	last_error TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_system_task UNIQUE (file_id, task_type, "key")
  );
  CREATE TABLE f_user_file (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	directory_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	size BIGINT NOT NULL,
  	md5 VARCHAR,
  	storage_key VARCHAR,
  	is_active VARCHAR(1) NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  INSERT INTO "f_user_file" VALUES(739165582607254282,1,0,'Export','Y',0,NULL,NULL,'Y',1785690007925,1785690007925);
  INSERT INTO "f_user_file" VALUES(739165582619836800,1,0,'Inbox','Y',0,NULL,NULL,'Y',1785690007929,1785690007929);
  INSERT INTO "f_user_file" VALUES(739165582628225678,1,0,'Screenshot','Y',0,NULL,NULL,'Y',1785690007931,1785690007931);
  INSERT INTO "f_user_file" VALUES(739165582632420176,1,0,'NOTE','Y',0,NULL,NULL,'Y',1785690007932,1785690007932);
  INSERT INTO "f_user_file" VALUES(739165582640808209,1,739165582632420176,'Note','Y',0,NULL,NULL,'Y',1785690007934,1785690007934);
  INSERT INTO "f_user_file" VALUES(739165582649197369,1,739165582632420176,'MyStyle','Y',0,NULL,NULL,'Y',1785690007936,1785690007936);
  INSERT INTO "f_user_file" VALUES(739165582657585868,1,0,'DOCUMENT','Y',0,NULL,NULL,'Y',1785690007938,1785690007938);
  INSERT INTO "f_user_file" VALUES(739165582661779895,1,739165582657585868,'Document','Y',0,NULL,NULL,'Y',1785690007939,1785690007939);
  INSERT INTO "f_user_file" VALUES(739165582762442807,1,0,'My Notes','Y',0,NULL,NULL,'Y',1785690007963,1785690007963);
  CREATE TABLE key_values (
  	"key" VARCHAR NOT NULL,
  	value VARCHAR NOT NULL,
  	expiry FLOAT NOT NULL,
  	PRIMARY KEY ("key")
  );
  INSERT INTO "key_values" VALUES('challenge:seed_user@example.com','67599229|1785690007944',1785690307.9448);
  INSERT INTO "key_values" VALUES('rate_limit:login:ip:127.0000.0.1000:29761500','1',1785690127.9479);
  INSERT INTO "key_values" VALUES('rate_limit:login:account:seed_user@example.com:29761500','1',1785690127.9505);
  INSERT INTO "key_values" VALUES('session:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJzZWVkX3VzZXJAZXhhbXBsZS5jb20iLCJlcXVpcG1lbnRfbm8iOiIiLCJpYXQiOjE3ODU2OTAwMDcsImV4cCI6MTc4NTc3NjQwN30.d2-NABDsj5sEkoBY4OhZnSVj_zktffDjkHF0MZ2eqtI','seed_user@example.com|',1785776407.9570);
  CREATE TABLE login_records (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	login_method VARCHAR,
  	equipment VARCHAR,
  	ip VARCHAR,
  	create_time VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  INSERT INTO "login_records" VALUES(1,1,'2',NULL,'127.0000.0.1000','2026-08-02T17:00:7.9554');
  CREATE TABLE t_schedule_task (
  	task_id BIGINT NOT NULL,
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	detail VARCHAR,
  	status VARCHAR NOT NULL,
  	importance VARCHAR,
  	due_time BIGINT,
  	completed_time BIGINT,
  	recurrence VARCHAR,
  	is_reminder_on BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (task_id)
  );
  CREATE TABLE t_schedule_task_group (
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (task_list_id)
  );
  CREATE TABLE users (
  	id INTEGER NOT NULL,
  	email VARCHAR NOT NULL,
  	password_md5 VARCHAR NOT NULL,
  	is_active BOOLEAN NOT NULL,
  	display_name VARCHAR,
  	phone VARCHAR,
  	avatar VARCHAR,
  	total_capacity VARCHAR NOT NULL,
  	is_admin BOOLEAN NOT NULL,
  	PRIMARY KEY (id)
  );
  INSERT INTO "users" VALUES(1,'seed_user@example.com','b92f4a4dbe3d66796566b285f635399d',1,'Seed User',NULL,NULL,'10737418240',1);
  CREATE INDEX ix_f_note_page_content_file_id ON f_note_page_content (file_id);
  CREATE INDEX ix_f_summary_file_id ON f_summary (file_id);
  CREATE INDEX ix_f_summary_parent_unique_identifier ON f_summary (parent_unique_identifier);
  CREATE INDEX ix_f_summary_user_id ON f_summary (user_id);
  CREATE INDEX ix_f_summary_tag_user_id ON f_summary_tag (user_id);
  CREATE INDEX ix_f_system_task_file_id ON f_system_task (file_id);
  CREATE INDEX ix_f_system_task_task_type ON f_system_task (task_type);
  CREATE INDEX idx_user_dir_active ON f_user_file (user_id, directory_id, is_active);
  CREATE INDEX ix_f_user_file_directory_id ON f_user_file (directory_id);
  CREATE INDEX ix_f_user_file_user_id ON f_user_file (user_id);
  CREATE INDEX ix_key_values_expiry ON key_values (expiry);
  CREATE INDEX ix_t_schedule_task_task_list_id ON t_schedule_task (task_list_id);
  CREATE INDEX ix_t_schedule_task_user_id ON t_schedule_task (user_id);
  CREATE INDEX ix_t_schedule_task_group_user_id ON t_schedule_task_group (user_id);
  CREATE UNIQUE INDEX ix_users_email ON users (email);
  CREATE UNIQUE INDEX ix_devices_equipment_no ON devices (equipment_no);
  CREATE INDEX ix_devices_user_id ON devices (user_id);
  CREATE INDEX ix_login_records_create_time ON login_records (create_time);
  CREATE INDEX ix_login_records_user_id ON login_records (user_id);
  COMMIT;
  '''
# ---
# name: test_sqlite_fixture_matches_snapshot[db_v1_schedule.sqlite][db_v1_schedule_sql_dump]
  '''
  BEGIN TRANSACTION;
  CREATE TABLE alembic_version (
  	version_num VARCHAR(32) NOT NULL,
  	CONSTRAINT alembic_version_pkc PRIMARY KEY (version_num)
  );
  INSERT INTO "alembic_version" VALUES('b8e9c0d1e2f3');
  CREATE TABLE devices (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	equipment_no VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  CREATE TABLE f_capacity (
  	user_id BIGINT NOT NULL,
  	used_capacity BIGINT NOT NULL,
  	total_capacity BIGINT NOT NULL,
  	PRIMARY KEY (user_id)
  );
  CREATE TABLE f_note_page_content (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	page_index BIGINT NOT NULL,
  	page_id VARCHAR NOT NULL,
  	content_hash VARCHAR,
  	text_content TEXT,
  	embedding TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_note_page_content UNIQUE (file_id, page_id)
  );
  CREATE TABLE f_recycle_file (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	size BIGINT NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	delete_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  CREATE TABLE f_summary (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_id BIGINT,
  	name VARCHAR,
  	unique_identifier VARCHAR NOT NULL,
  	parent_unique_identifier VARCHAR,
  	content TEXT,
  	source_path VARCHAR,
  	data_source VARCHAR,
  	source_type BIGINT,
  	is_summary_group BOOLEAN NOT NULL,
  	description VARCHAR,
  	tags VARCHAR,
  	md5_hash VARCHAR,
  	extra_metadata TEXT,
  	comment_str VARCHAR,
  	comment_handwrite_name VARCHAR,
  	handwrite_inner_name VARCHAR,
  	handwrite_md5 VARCHAR,
  	creation_time BIGINT,
  	last_modified_time BIGINT,
  	is_deleted BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	author VARCHAR,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  CREATE TABLE f_summary_tag (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	name VARCHAR NOT NULL,
  	unique_identifier VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  CREATE TABLE f_system_task (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	task_type VARCHAR NOT NULL,
  	"key" VARCHAR NOT NULL,
  	status VARCHAR NOT NULL,
  	data TEXT,
  	retry_count BIGINT NOT NULL,
  	last_error TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_system_task UNIQUE (file_id, task_type, "key")
  );
  CREATE TABLE f_user_file (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	directory_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	size BIGINT NOT NULL,
  	md5 VARCHAR,
  	storage_key VARCHAR,
  	is_active VARCHAR(1) NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  INSERT INTO "f_user_file" VALUES(744362741057192813,1,0,'Export','Y',0,NULL,NULL,'Y',1786929107058,1786929107058);
  INSERT INTO "f_user_file" VALUES(744362741065580905,1,0,'Inbox','Y',0,NULL,NULL,'Y',1786929107061,1786929107061);
  INSERT INTO "f_user_file" VALUES(744362741073969357,1,0,'Screenshot','Y',0,NULL,NULL,'Y',1786929107063,1786929107063);
  INSERT INTO "f_user_file" VALUES(744362741082358069,1,0,'NOTE','Y',0,NULL,NULL,'Y',1786929107065,1786929107065);
  INSERT INTO "f_user_file" VALUES(744362741090746574,1,744362741082358069,'Note','Y',0,NULL,NULL,'Y',1786929107067,1786929107067);
  INSERT INTO "f_user_file" VALUES(744362741099135852,1,744362741082358069,'MyStyle','Y',0,NULL,NULL,'Y',1786929107068,1786929107068);
  INSERT INTO "f_user_file" VALUES(744362741103329511,1,0,'DOCUMENT','Y',0,NULL,NULL,'Y',1786929107070,1786929107070);
  INSERT INTO "f_user_file" VALUES(744362741111718103,1,744362741103329511,'Document','Y',0,NULL,NULL,'Y',1786929107072,1786929107072);
  CREATE TABLE key_values (
  	"key" VARCHAR NOT NULL,
  	value VARCHAR NOT NULL,
  	expiry FLOAT NOT NULL,
  	PRIMARY KEY ("key")
  );
  INSERT INTO "key_values" VALUES('session:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJ0ZXN0QGV4YW1wbGUuY29tIn0.4smSWReN5BdGqnIqUUtQu0Myuu4h4rCl7UNXmUoOZdI','test@example.com|',1786932707.0740);
  CREATE TABLE login_records (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	login_method VARCHAR,
  	equipment VARCHAR,
  	ip VARCHAR,
  	create_time VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  CREATE TABLE t_schedule_task (
  	task_id BIGINT NOT NULL,
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	detail VARCHAR,
  	status VARCHAR NOT NULL,
  	importance VARCHAR,
  	due_time BIGINT,
  	completed_time BIGINT,
  	recurrence VARCHAR,
  	is_reminder_on BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL, links VARCHAR, sort BIGINT, sort_completed BIGINT, planer_sort BIGINT, all_sort BIGINT, all_sort_completed BIGINT, sort_time BIGINT, planer_sort_time BIGINT, all_sort_time BIGINT,
  	PRIMARY KEY (task_id)
  );
  INSERT INTO "t_schedule_task" VALUES(744362741170438528,744362741145272573,1,'Buy Milk Before Upgrade','Must purchase whole milk','needsAction',NULL,NULL,NULL,NULL,0,1786929107086,1786929107086,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL);
  INSERT INTO "t_schedule_task" VALUES(744362741199799018,744362741145272573,1,'Schedule Dentist Appointment','Routine checkup','needsAction',NULL,NULL,NULL,NULL,0,1786929107093,1786929107093,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL);
  CREATE TABLE t_schedule_task_group (
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (task_list_id)
  );
  INSERT INTO "t_schedule_task_group" VALUES(744362741145272573,1,'Inbox Tasks',1786929107080);
  CREATE TABLE users (
  	id INTEGER NOT NULL,
  	email VARCHAR NOT NULL,
  	password_md5 VARCHAR NOT NULL,
  	is_active BOOLEAN NOT NULL,
  	display_name VARCHAR,
  	phone VARCHAR,
  	avatar VARCHAR,
  	total_capacity VARCHAR NOT NULL,
  	is_admin BOOLEAN NOT NULL,
  	PRIMARY KEY (id)
  );
  INSERT INTO "users" VALUES(1,'test@example.com','e16b2ab8d12314bf4efbd6203906ea6c',1,NULL,NULL,NULL,'10737418240',0);
  CREATE INDEX ix_f_note_page_content_file_id ON f_note_page_content (file_id);
  CREATE INDEX ix_f_summary_file_id ON f_summary (file_id);
  CREATE INDEX ix_f_summary_parent_unique_identifier ON f_summary (parent_unique_identifier);
  CREATE INDEX ix_f_summary_user_id ON f_summary (user_id);
  CREATE INDEX ix_f_summary_tag_user_id ON f_summary_tag (user_id);
  CREATE INDEX ix_f_system_task_file_id ON f_system_task (file_id);
  CREATE INDEX ix_f_system_task_task_type ON f_system_task (task_type);
  CREATE INDEX idx_user_dir_active ON f_user_file (user_id, directory_id, is_active);
  CREATE INDEX ix_f_user_file_directory_id ON f_user_file (directory_id);
  CREATE INDEX ix_f_user_file_user_id ON f_user_file (user_id);
  CREATE INDEX ix_key_values_expiry ON key_values (expiry);
  CREATE INDEX ix_t_schedule_task_task_list_id ON t_schedule_task (task_list_id);
  CREATE INDEX ix_t_schedule_task_user_id ON t_schedule_task (user_id);
  CREATE INDEX ix_t_schedule_task_group_user_id ON t_schedule_task_group (user_id);
  CREATE UNIQUE INDEX ix_users_email ON users (email);
  CREATE UNIQUE INDEX ix_devices_equipment_no ON devices (equipment_no);
  CREATE INDEX ix_devices_user_id ON devices (user_id);
  CREATE INDEX ix_login_records_create_time ON login_records (create_time);
  CREATE INDEX ix_login_records_user_id ON login_records (user_id);
  COMMIT;
  '''
# ---
# name: test_sqlite_fixture_matches_snapshot[db_v1_summary_api.sqlite][db_v1_summary_api_sql_dump]
  '''
  BEGIN TRANSACTION;
  CREATE TABLE alembic_version (
  	version_num VARCHAR(32) NOT NULL,
  	CONSTRAINT alembic_version_pkc PRIMARY KEY (version_num)
  );
  INSERT INTO "alembic_version" VALUES('7a8291f043bc');
  CREATE TABLE devices (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	equipment_no VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  CREATE TABLE f_capacity (
  	user_id BIGINT NOT NULL,
  	used_capacity BIGINT NOT NULL,
  	total_capacity BIGINT NOT NULL,
  	PRIMARY KEY (user_id)
  );
  CREATE TABLE f_note_page_content (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	page_index BIGINT NOT NULL,
  	page_id VARCHAR NOT NULL,
  	content_hash VARCHAR,
  	text_content TEXT,
  	embedding TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_note_page_content UNIQUE (file_id, page_id)
  );
  CREATE TABLE f_recycle_file (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	size BIGINT NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	delete_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  CREATE TABLE f_summary (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	file_id BIGINT,
  	name VARCHAR,
  	unique_identifier VARCHAR NOT NULL,
  	parent_unique_identifier VARCHAR,
  	content TEXT,
  	source_path VARCHAR,
  	data_source VARCHAR,
  	source_type BIGINT,
  	is_summary_group BOOLEAN NOT NULL,
  	description VARCHAR,
  	tags VARCHAR,
  	md5_hash VARCHAR,
  	extra_metadata TEXT,
  	comment_str VARCHAR,
  	comment_handwrite_name VARCHAR,
  	handwrite_inner_name VARCHAR,
  	handwrite_md5 VARCHAR,
  	creation_time BIGINT,
  	last_modified_time BIGINT,
  	is_deleted BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	author VARCHAR,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  INSERT INTO "f_summary" VALUES(741735919668691745,1,NULL,NULL,'f5ff67d6-4e06-4e41-9488-182a440471a5',NULL,'End-to-end API generated summary content.','/Document/E2E.note',NULL,NULL,0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,0,1786302824036,1786302824036,'API Test');
  CREATE TABLE f_summary_tag (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	name VARCHAR NOT NULL,
  	unique_identifier VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	UNIQUE (unique_identifier)
  );
  CREATE TABLE f_system_task (
  	id BIGINT NOT NULL,
  	file_id BIGINT NOT NULL,
  	task_type VARCHAR NOT NULL,
  	"key" VARCHAR NOT NULL,
  	status VARCHAR NOT NULL,
  	data TEXT,
  	retry_count BIGINT NOT NULL,
  	last_error TEXT,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id),
  	CONSTRAINT uq_system_task UNIQUE (file_id, task_type, "key")
  );
  CREATE TABLE f_user_file (
  	id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	directory_id BIGINT NOT NULL,
  	file_name VARCHAR NOT NULL,
  	is_folder VARCHAR(1) NOT NULL,
  	size BIGINT NOT NULL,
  	md5 VARCHAR,
  	storage_key VARCHAR,
  	is_active VARCHAR(1) NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL,
  	PRIMARY KEY (id)
  );
  INSERT INTO "f_user_file" VALUES(741735919442199452,1,0,'Export','Y',0,NULL,NULL,'Y',1786302823981,1786302823981);
  INSERT INTO "f_user_file" VALUES(741735919454781572,1,0,'Inbox','Y',0,NULL,NULL,'Y',1786302823985,1786302823985);
  INSERT INTO "f_user_file" VALUES(741735919463170435,1,0,'Screenshot','Y',0,NULL,NULL,'Y',1786302823987,1786302823987);
  INSERT INTO "f_user_file" VALUES(741735919471559198,1,0,'NOTE','Y',0,NULL,NULL,'Y',1786302823989,1786302823989);
  INSERT INTO "f_user_file" VALUES(741735919479947816,1,741735919471559198,'Note','Y',0,NULL,NULL,'Y',1786302823991,1786302823991);
  INSERT INTO "f_user_file" VALUES(741735919488336254,1,741735919471559198,'MyStyle','Y',0,NULL,NULL,'Y',1786302823993,1786302823993);
  INSERT INTO "f_user_file" VALUES(741735919496724995,1,0,'DOCUMENT','Y',0,NULL,NULL,'Y',1786302823994,1786302823994);
  INSERT INTO "f_user_file" VALUES(741735919500918939,1,741735919496724995,'Document','Y',0,NULL,NULL,'Y',1786302823996,1786302823996);
  CREATE TABLE key_values (
  	"key" VARCHAR NOT NULL,
  	value VARCHAR NOT NULL,
  	expiry FLOAT NOT NULL,
  	PRIMARY KEY ("key")
  );
  INSERT INTO "key_values" VALUES('session:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJhcGlfdGVzdEBleGFtcGxlLmNvbSJ9.h3MUGaZ6gCUtWrry6rdk7VvvgtcXsRLW7jtU4ZvP5TQ','api_test@example.com|',1786306423.9981);
  CREATE TABLE login_records (
  	id INTEGER NOT NULL,
  	user_id INTEGER NOT NULL,
  	login_method VARCHAR,
  	equipment VARCHAR,
  	ip VARCHAR,
  	create_time VARCHAR NOT NULL,
  	PRIMARY KEY (id),
  	FOREIGN KEY(user_id) REFERENCES users (id)
  );
  CREATE TABLE t_schedule_task (
  	task_id BIGINT NOT NULL,
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	detail VARCHAR,
  	status VARCHAR NOT NULL,
  	importance VARCHAR,
  	due_time BIGINT,
  	completed_time BIGINT,
  	recurrence VARCHAR,
  	is_reminder_on BOOLEAN NOT NULL,
  	create_time BIGINT NOT NULL,
  	update_time BIGINT NOT NULL, links VARCHAR, sort BIGINT, sort_completed BIGINT, planer_sort BIGINT, all_sort BIGINT, all_sort_completed BIGINT, sort_time BIGINT, planer_sort_time BIGINT, all_sort_time BIGINT,
  	PRIMARY KEY (task_id)
  );
  CREATE TABLE t_schedule_task_group (
  	task_list_id BIGINT NOT NULL,
  	user_id BIGINT NOT NULL,
  	title VARCHAR NOT NULL,
  	create_time BIGINT NOT NULL,
  	PRIMARY KEY (task_list_id)
  );
  CREATE TABLE users (
  	id INTEGER NOT NULL,
  	email VARCHAR NOT NULL,
  	password_md5 VARCHAR NOT NULL,
  	is_active BOOLEAN NOT NULL,
  	display_name VARCHAR,
  	phone VARCHAR,
  	avatar VARCHAR,
  	total_capacity VARCHAR NOT NULL,
  	is_admin BOOLEAN NOT NULL,
  	PRIMARY KEY (id)
  );
  INSERT INTO "users" VALUES(1,'api_test@example.com','482c811da5d5b4bc6d497ffa98491e38',1,NULL,NULL,NULL,'10737418240',1);
  CREATE INDEX ix_f_note_page_content_file_id ON f_note_page_content (file_id);
  CREATE INDEX ix_f_summary_file_id ON f_summary (file_id);
  CREATE INDEX ix_f_summary_parent_unique_identifier ON f_summary (parent_unique_identifier);
  CREATE INDEX ix_f_summary_user_id ON f_summary (user_id);
  CREATE INDEX ix_f_summary_tag_user_id ON f_summary_tag (user_id);
  CREATE INDEX ix_f_system_task_file_id ON f_system_task (file_id);
  CREATE INDEX ix_f_system_task_task_type ON f_system_task (task_type);
  CREATE INDEX idx_user_dir_active ON f_user_file (user_id, directory_id, is_active);
  CREATE INDEX ix_f_user_file_directory_id ON f_user_file (directory_id);
  CREATE INDEX ix_f_user_file_user_id ON f_user_file (user_id);
  CREATE INDEX ix_key_values_expiry ON key_values (expiry);
  CREATE INDEX ix_t_schedule_task_task_list_id ON t_schedule_task (task_list_id);
  CREATE INDEX ix_t_schedule_task_user_id ON t_schedule_task (user_id);
  CREATE INDEX ix_t_schedule_task_group_user_id ON t_schedule_task_group (user_id);
  CREATE UNIQUE INDEX ix_users_email ON users (email);
  CREATE UNIQUE INDEX ix_devices_equipment_no ON devices (equipment_no);
  CREATE INDEX ix_devices_user_id ON devices (user_id);
  CREATE INDEX ix_login_records_create_time ON login_records (create_time);
  CREATE INDEX ix_login_records_user_id ON login_records (user_id);
  COMMIT;
  '''
# ---
